--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -57,7 +57,7 @@
                     <button class="close-btn" id="close-modal" aria-label="Cerrar modal">&times;</button>
                 </div>
             </div>
-            <iframe id="runner-frame" title="Vista previa de código HTML"></iframe>
+            <iframe id="runner-frame" src="about:blank" title="Vista previa de código HTML"></iframe>
         </div>
     </div>
     
