--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -155,7 +155,7 @@
     <script>hljs.highlightAll();</script>
 
     <!-- TU JS PERSONALIZADO -->
-    <script src="{{ url_for('static', filename='js/jslog.js') }}" defer></script>
+    <script src="/static/js/jslog.js" defer></script>
 
 </body>
 </html>
