--- a/web/templates/login.html
+++ b/web/templates/login.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
 
     <!-- TU CSS PERSONALIZADO -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='stylelog.css') }}">
+    <link rel="stylesheet" href="/static/stylelog.css">
 
 </head>
 <body>
